name:                hcc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hsuhau/hcc#readme
license:             BSD3
license-file:        LICENSE
author:              Hsu Hau
maintainer:          hsuhau617@gmail.com
copyright:           2018 Hsu Hau
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable hcc
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: Parser
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

